# ai-way

./: .gitignore  BUG-001-toolbox-detection.md  BUG-002-toolbox-execution-command.md  BUG-003-tui-performance-regression.md  BUG-015-sleep-in-polling-loops.md  BUG-016-config-test-failure.md  CLAUDE.md  Cargo.toml  DELIVERABLES.txt  DESIGN-loading-screen.md  DESIGN-palette-rotation-code-example.rs  DESIGN-palette-rotation-comparison.md  DESIGN-palette-rotation.md  EPIC-002-ARCHITECTURE-REVIEW.md  EPIC-002-REVIEW-SUMMARY.md  LOADING-SCREEN-MOCKUPS.txt  ODYSSEY-tui-to-framebuffer.md  README.md  STORY-3-COMPLETION-SUMMARY.md  STORY-3-INTEGRATION-DIAGRAM.md  STRESS_TESTING.md  TODO-017-framebuffer-optimization.md  TODO-CRITICAL-test-infrastructure-overhaul.md  TODO-accessibility.md  TODO-avatar-animation-system.md  TODO-blocking-startup.md  TODO-conductor-ux-split.md  TODO-disabled-tests.md  TODO-epic-001-ratatui-quick-wins.md  TODO-epic-002-layer-dirty-tracking.md  TODO-epic-2026Q1-avatar-animation.md  TODO-epic-2026Q1-multi-surface.md  TODO-implementation-plan.md  TODO-integration-testing.md  TODO-main.md  TODO-meta-agent-conductor-interactions.md  TODO-multi-model.md  TODO-next.md  TODO-ollama-gpu.md  TODO-ollama-keep-alive.md  (+20 more)
.github/workflows/: test.yml
.integrity/: checksums.sha256
conductor/core/: Cargo.toml
conductor/core/src/: accessibility.rs  avatar.rs  conductor.rs  conversation.rs  events.rs  lib.rs  messages.rs  security.rs  session.rs  surface_registry.rs  tasks.rs
conductor/core/src/animation/: mod.rs  timing.rs
conductor/core/src/avatar/: block.rs  cache.rs  evolution.rs  mod.rs  security.rs
conductor/core/src/backend/: mod.rs  ollama.rs  traits.rs
conductor/core/src/config/: mod.rs
conductor/core/src/routing/: backends.rs  config.rs  connection_pool.rs  fallback.rs  health.rs  metrics.rs  mod.rs  policy.rs  router.rs  semaphore.rs
conductor/core/src/streaming/: stream_manager.rs
conductor/core/src/transport/: auth.rs  config.rs  factory.rs  frame.rs  heartbeat.rs  in_process.rs  mod.rs  traits.rs
conductor/core/src/transport/unix_socket/: client.rs  mod.rs  server.rs
conductor/core/src/transport/websocket/: frame_adapter.rs  traits.rs
conductor/core/tests/: routing_performance_tests.rs
core/: conductor.py  loader.py  modelfile_gen.py  ollama_client.py  server.py  session.py
docs/: reactive-branch-merge-criteria.md  yollayah-avatar-constraints.md
facts/: BUG-animator-blocking-sleep-PROPOSAL.md  GPU-MODEL-GENERATION-FINDINGS.md  PERFORMANCE-AUDIT-ollama-streaming-root-cause.md  PERFORMANCE-AUDIT-streaming-slowness-root-cause.md  REACTIVE-RENDERING-PATTERNS-PROPOSAL.md  SLEEP-AUDIT-FINDINGS-PRELIMINARY.md  TRIAGE-DECISION-sleep-audit-2026-01-04.md  TUI-LAUNCH-BUG-FINDINGS.md  TUI-RENDER-BLOCKING-ANALYSIS-PROPOSAL.md  conductor-blocking-audit.md  conductor-streaming-analysis.md
facts/tools/: TOOLBOX.md
knowledge/: KNOWLEDGE.md
knowledge/anti-patterns/: ASYNC-PATTERNS-sleep-vs-interval-PROPOSAL.md  FORBIDDEN-inefficient-calculations.md
knowledge/methodology/: DONE-easter-egg.md  EPIC-definition.md  TODO-DRIVEN-METHODOLOGY.md
knowledge/migration/: reactive-migration-guide.md
knowledge/platform/: TOOLBOX.md
knowledge/principles/: PRINCIPLE-async-sleep-policy-PROPOSAL.md  PRINCIPLE-data-flow.md  PRINCIPLE-efficiency.md
knowledge/project/: AI-WAY.md
knowledge/requirements/: REQUIRED-separation.md
knowledge/team/: TEAM.md
lib/: common.sh
lib/agents/: sync.sh
lib/integrity/: environment.sh  init.sh  level-0-git.sh  level-1-checksums.sh  level-2-signatures.sh
lib/logging/: bus.sh  init.sh
lib/ollama/: lifecycle.sh  service.sh
lib/routing/: README.md  aggregator.sh  avatar_agent.sh  context.sh  init.sh  tasks.sh
lib/user/: README.md  history.sh  init.sh  preferences.sh  storage.sh
lib/ux/: output.sh  (+1 more)
progress/: DONE-ADR-001-fresh-start-vs-migration.md  DONE-ANALYSIS-blocking-await-anti-pattern-triage.md  DONE-BUG-015-sleep-in-polling-loops.md  DONE-PERFORMANCE-AUDIT-FRAMEBUFFER.md  DONE-SPRINT-00-foundation.md  DONE-STORY-3-IMPLEMENTATION-PLAN.md  DONE-progress-migration-plan.md  EPIC-001-TUI-reactive-overhaul.md  TODO-101-create-reactive-branch.md  TODO-102-add-reactive-dependencies.md  TODO-103-build-reactive-prototype.md  TODO-104-document-migration-patterns.md  TODO-AI-WAY.md  TODO-BUG-001-tui-waits-for-full-stream.md  TODO-BUG-006-conductor-streaming-not-reactive.md  TODO-BUG-007-interactive-mode-slow.md  TODO-BUG-008-remove-ollama-overrides.md  TODO-BUG-009-model-creation-impacts-performance.md  TODO-EPIC-001-yollayah-gpu-model-generation.md  TODO-EPIC-conductor-reactive-overhaul.md  TODO-QA-verify-BUG-001.md  TODO-STORY-001-yollayah-model-analysis.md  TODO-STORY-002-integration-testing-tools.md  TODO-STORY-conductor-warmup-elimination.md  TODO-async-architecture-review.md  TODO-avatar-animation-system.md  TODO-blocking-startup.md  TODO-conductor-async-audit.md  TODO-conductor-ux-split.md  TODO-epic-001-ratatui-quick-wins.md  TODO-epic-2026Q1-avatar-animation.md  TODO-epic-2026Q1-multi-surface.md  TODO-implementation-plan.md  TODO-multi-conversation.md  TODO-ollama-gpu.md  TODO-security-findings.md  TODO-sprint-toolbox-2.md  TODO-yollayah.sh-improvements.md
reference/: FORBIDDEN-inefficient-calculations.md  PRINCIPLE-efficiency.md
scripts/: install-hooks.sh
tui/: Cargo.toml
tui/src/: app.rs  conductor_client.rs  display.rs  icons.rs  lib.rs  main.rs
tui/src/avatar/: activity.rs  animation.rs  animator.rs  commands.rs  dirty_tracker.rs  mod.rs  sizes.rs  sprites.rs
tui/src/backend/: client.rs  mod.rs
tui/src/compositor/: layer.rs  mod.rs
tui/src/tasks/: mod.rs  renderer.rs  state.rs
tui/src/theme/: mod.rs
tui/src/widgets/: text_block.rs
tui/tests/: README-cpu-performance.md  README_STRESS_TESTS.md  STRESS_TEST_GUIDE.md  STRESS_TEST_RESULTS.md  integration_test.rs  multi_model_integration_test.rs
workdir/: README.md
workflows/: sprint.md  todo-driven-development.md
yollayah/: yollayah-build-logs.sh
yollayah/conductor/daemon/: Cargo.toml
yollayah/conductor/daemon/src/: main.rs
(+134 files in other folders)
