[package]
name = "conductor-core"
version = "0.1.0"
edition = "2021"
description = "Headless meta-agent orchestration core for ai-way"
authors = ["ai-way contributors"]
license = "AGPL-3.0"

[lib]
name = "conductor_core"
path = "src/lib.rs"

[[bin]]
name = "conductor-daemon"
path = "src/bin/conductor-daemon.rs"

[features]
default = []
# Enable WebSocket transport for remote surfaces
websocket = ["tokio-tungstenite"]

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full", "rt-multi-thread", "macros", "sync", "net"] }
tokio-stream = "0.1"

# HTTP client for LLM backends
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async trait support
async-trait = "0.1"

# Unix socket peer credentials (Linux)
libc = "0.2"

# Optional: WebSocket transport
tokio-tungstenite = { version = "0.24", optional = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.10"
